turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
    var state = 0;

    def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {

    	def place(couleur:Color, colors:Array[Color]):Int={
	for(i <- 0 to colors.length - 1){
		if (colors(i) == couleur){return i}
	}
	return 9658
}
	var x = getCouleurSol()
	var p = place(x,colors)
	val (a,b,c) = rule(state,p)
	b match{
		case 0 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse();avance(); state = c
		case 2 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); gauche(); avance(); state = c
		case 4 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); droite(); droite(); avance(); state = c
		case 8 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); droite();avance(); state = c
	
	
	}
	
    }
